--- a/client/src/components/headers/header.css
+++ b/client/src/components/headers/header.css
@@ -1,42 +1,175 @@
-header{
-    min-height: 70px;
-    width: 100%;
-    overflow: hidden;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    border-bottom: 1px solid #ddd;
+.header {
+  width: 100%;
+  background-color: #fff;
+  /* position: fixed; */
+  /* top: 0; */
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
-header .logo{
-    flex: 1;
+
+
+.header-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 5px 120px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid rgb(231, 226, 226);
 }
-header a{
-    text-transform: uppercase;
-    color: #555;
+
+.header-left a {
+  color: #777;
+  letter-spacing: 1px;
 }
-header ul li{
-    display: inline-block;
-    opacity: 0.7;
-    padding: 0 20px;
+
+.header-left {
+  display: flex;
+  justify-content: space-between;
 }
-header ul li:hover{
-    opacity: 1;
+
+.phone {
+  margin-right: 10px;
 }
-.menu{
-    display: none;
+
+.social-icon {
+  margin-right: 15px;
 }
-.cart-icon{
-    position: relative;
-    margin-right: 20px;
+
+.languages {
+  margin-right: 30px !important;
+  color: #777 !important;
 }
-.cart-icon span{
-    background: crimson;
-    border-radius: 20px;
-    color: white;
-    position: absolute;
-    top:-10px;
-    right: -10px;
-    padding: 5px 7px;
-    font-size: 10px;
+
+.account {
+  color: #777 !important;
+}
+
+/* ----------------------------------------------------- */
+
+.header-middle {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 120px;
+  align-items: center;
+}
+
+.search {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu-cart {
+  padding: 20px 0px !important;
+}
+
+.cart-icons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cart-icon {
+  font-size: 25px;
+  margin-left: 30px;
+}
+
+.cart-icon-span {
+  margin-left: 20px;
+  color: black;
+}
+
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0px 20px;
+}
+
+.cart-item-content p {
+  color: black;
+}
+
+.cart-item-img {
+  width: 60px;
+  height: 60px;
+}
+
+.cart-item-total {
+  display: flex;
+  align-items: flex-end;
+  margin: 5px 30px;
+  padding-top: 10px;
+}
+
+.cart-total-price {
+  margin-left: auto;
+}
+
+.cart-item-button {
+  border: 1px solid black;
+  padding: 3px 15px;
+  margin: 10px 30px;
+  color: black;
+}
+
+.cart-item-button:hover {
+  border: 1px solid rgb(233, 169, 51);
+  background-color: rgb(233, 169, 51);
+  color: white;
+}
+
+/* ------------------------------------------------ */
+
+.header-bottom {
+  display: flex;
+  justify-content: space-between;
+  padding: 3px 120px;
+  align-items: center;
+  background-color: black;
+}
+
+.menu-header {
+  /* display: flex;
+    align-items: center; */
+  text-align: center;
+}
+
+.menu-header-ul {
+  list-style: none;
+  padding: 0px;
+  width: auto;
+  margin-bottom: 0px !important;
+}
+
+.menu-header-item {
+  margin-right: 15px;
+  display: inline-block;
+  padding: 10px;
+  font-size: 14px;
+}
+
+.menu-header-item:hover {
+  border-bottom: 1px solid rgb(233, 209, 103);
+  color: rgb(233, 209, 103);
+}
+
+.menu-header-item:hover a {
+  color: rgb(233, 209, 103);
+}
+
+.menu-header-item a {
+  color: white;
+  font-size: 15px;
+}
+
+.howdy {
+  color: white;
+  font-size: 15px;
+  border-bottom: 1px solid black;
+}
+
+.header-smile-icon{
+    color: rgb(233, 209, 103) !important;
 }
