--- a/client/src/components/mainpages/products/products.css
+++ b/client/src/components/mainpages/products/products.css
@@ -1,9 +1,8 @@
-.products{
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    justify-items: center;
-    margin: 20px 0;
+.products-wrap{
+    margin: 5px 120px;
+}
+
+.column_product{
 }
 
 /* ----------- Product Item ----------------- */
