--- a/client/src/components/mainpages/utils/productItem/productItem.css
+++ b/client/src/components/mainpages/utils/productItem/productItem.css
@@ -1,19 +1,49 @@
-.product_card{
+.product-card{
     max-width: 300px;
     overflow: hidden;
     height: 500px;
-    padding: 15px;
-    box-shadow: 0 0 15px #ddd;
-    margin: 10px 0;
+    margin: 10px 0px;
     position: relative;
 }
-.product_card img{
-    width: 100%;
-    height: 300px;
-    display: block;
-    object-fit: cover;
+
+.product-card:hover{
+    box-shadow: 1px 1px 5px #ddd;
 }
-.product_box h2{
+
+.product-card img{
+    width: 100%;
+    height: auto;
+    /* display: block; */
+    /* object-fit: cover; */
+}
+
+.product-card:hover .product-card-image .product-heart-out{
+    display: inline-block !important;
+}
+
+/* .product-heart-out:focus .product-heart-fill{
+    display: inline-block !important;
+} */
+
+.product-heart-out:focus{
+    display: none !important;
+}
+
+.product-heart{
+    display: none !important;
+    color: red !important;
+}
+
+.product-heart-fill{
+    color: red !important;
+}
+
+
+
+
+
+
+.product-card-content h2{
     width: 100%;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -22,10 +52,10 @@
     cursor: pointer;
     color: #323232;
 }
-.product_card span{
+.product-card span{
     color: crimson;
 }
-.product_box p{
+.product-card-content p{
     width: 100%;
     display: -webkit-box;
     -webkit-box-orient: vertical;
@@ -34,13 +64,13 @@
     overflow: hidden;
     color: #323232;
 }
-.row_btn{
+.row-btn{
     width: 100%;
     margin-top: 10px;
     display: flex;
     justify-content: space-between;
 }
-.row_btn a{
+.row-btn a{
     width: 50%;
     text-align: center;
     text-transform: uppercase;
@@ -49,15 +79,15 @@
     letter-spacing: 2px;
     padding: 6px;
 }
-#btn_buy{
+#btn-buy{
     background: #555;
     margin-right: 5px;
 }
-#btn_view{
+#btn-view{
     background: teal;
     margin-left: 5px;
 }
-.product_card input{
+.product-card input{
     position: absolute;
     width: 25px;
     height: 25px;
