--- a/client/src/components/headers/header.css
+++ b/client/src/components/headers/header.css
@@ -8,7 +8,6 @@
   z-index: 1;
 }
 
-
 .header-top {
   display: flex;
   justify-content: space-between;
@@ -61,7 +60,8 @@
 }
 
 .menu-cart {
-  padding: 20px 0px !important;
+  padding: 20px 20px !important;
+  background-color: white;
 }
 
 .cart-icons {
