--- a/client/src/components/mainpages/checkout/cart.css
+++ b/client/src/components/mainpages/checkout/cart.css
@@ -1,3 +1,10 @@
+.checkout-wrap{
+    padding: 30px 120px;
+}
+
+.Breadcrumb{
+    margin-bottom: 60px !important;
+}
 .cart{
     position: relative;
     border: 1px solid #ccc;
@@ -20,13 +27,55 @@
     font-weight: 900;
     cursor: pointer;
 }
-.total{
-    width: 100%;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+
+/* ----------table------------- */
+.checkout-image{
+    height: 80px;
+    width: 80px;
 }
-.total h3{
-    color: crimson;
+
+.button-quantity{
+    font-size: 10px !important;
+    width: 5px !important;
+    height: 20px !important;
+    margin: 0px 5px !important;
+}
+
+.history-page table, th, tr, td {
+    border: #ddd !important;
+    border-bottom: 1px solid  #ddd !important;
+}
+
+
+/* ---------total------------- */
+.total{
+    padding: 10px 20px 15px;
+    border:1px solid #f0f0f0;
+}
+
+.total-title h2{
+    margin: auto;
+    font-weight: 800;
+}
+
+
+.input-address{
+    margin-bottom: 10px !important;
+}
+
+.row-shipping{
+    border-bottom: 2px dotted rgb(212, 212, 218);
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    margin-top:30px;
+}
+
+.row-total{
+    margin-bottom: 30px;
+}
+
+.button-order{
+    background-color: rgb(85, 82, 82) !important;
+    margin-top: 20px;
+    border-radius:8px !important;
 }
