--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,6 +31,10 @@ button{
   cursor: pointer;
 }
 
+.input{
+  
+}
+
 /* ---------------- Header ------------ */
 @import url("./components/headers/header.css");
 
@@ -42,7 +46,7 @@ button{
 @import url("./components/mainpages/products/products.css");
 
 /* ---------------- Detail Product --------------- */
-@import url("./components/mainpages/detailProduct/detailProduct.css");
+@import url("./components/mainpages/products/detailProduct/detailProduct.css");
 
 /* ------------- Login/Register ----------------- */
 @import url("./components/mainpages/auth/login.css");
