--- a/client/src/components/mainpages/checkout/cart.css
+++ b/client/src/components/mainpages/checkout/cart.css
@@ -58,24 +58,20 @@
     font-weight: 800;
 }
 
-
-.input-address{
-    margin-bottom: 10px !important;
-}
-
-.row-shipping{
-    border-bottom: 2px dotted rgb(212, 212, 218);
-    padding-bottom: 10px;
-    margin-bottom: 20px;
-    margin-top:30px;
-}
-
-.row-total{
-    margin-bottom: 30px;
-}
-
 .button-order{
     background-color: rgb(85, 82, 82) !important;
     margin-top: 20px;
     border-radius:8px !important;
 }
+
+.diot-checkout{
+    border-bottom: 3px dotted beige;
+    margin-bottom: 30px;
+}
+
+/* -----------cart-empty------------ */
+.cart-empty-image{
+    margin-left: 40px;
+    margin-bottom: 0px !important;
+}
+
