--- a/client/src/components/mainpages/history/history.css
+++ b/client/src/components/mainpages/history/history.css
@@ -55,3 +55,24 @@ table a{
 .mess-no-order p{
     margin-bottom: 0px !important;
 }
+
+.row-phone{
+    margin-bottom: 0px;
+    margin-top: 25px;
+}
+
+.span-colon{
+    margin-right: 20px;
+    float: right;
+}
+
+.row-shipping1{
+    padding-bottom: 10px;
+    margin-bottom: 0px;
+    border-bottom: 3px dotted beige;
+}
+
+.row-total{
+    padding: 30px 0px 20px;
+    margin-bottom: 0px;
+}
