--- a/client/src/components/mainpages/profile/Profile.css
+++ b/client/src/components/mainpages/profile/Profile.css
@@ -7,7 +7,6 @@
     border-right: 1px solid rgb(228, 225, 225);
 }
 
-
 .profile-title{
     text-align: center;
     margin: 20px 0px 40px;
@@ -18,15 +17,17 @@
     margin-right: 20px;
 }
 
-.input{
-    width: 500px !important;
-    height: 40px !important;
+.input-profile{
+    width: 200px !important;
 }
 
 /* ---------profile-avatar------------ */
 
 .config-image{
     border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    margin-bottom: 30px;
 }
 
 .change-avatar{
