--- a/client/src/index.css
+++ b/client/src/index.css
@@ -54,10 +54,10 @@ button{
 @import url("./components/mainpages/history/history.css");
 
 /* ------------------ Categories ------------------ */
-@import url("./components/mainpages/categories/categories.css");
+/* @import url("./components/mainpages/categories/categories.css"); */
 
 /* ------------------- Create Product -------------- */
-@import url("./components/mainpages/createProduct/createProduct.css");
+/* @import url("./components/mainpages/createProduct/createProduct.css"); */
 
 /* ------------------- HomeSlider -------------- */
 @import url("./components/mainpages/home/homeslider/HomeSlider.css");
